@@ -1,3 +1,8 @@
+2008-12-22 21:51-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Modules/Debuggers/ProjectCenter/PCDebugger.m: Write to
+	the filehandle via the stream in -[PCDebugger putChar:].
+
 2008-12-22 19:56-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Modules/Debuggers/ProjectCenter/PCDebugger.h
